@@ -11,6 +11,7 @@ NEWS
   * Now really fix mod auth ldap (#1066)
   * Fix leaving zombie process with include_shell (#1777)
   * Removed debian/, openwrt/ and cygwin/; they weren't kept up-to-date, and we decided to remove dist. specific stuff
+  * Try to convert string options to shorts for numeric options in config file; allows to use env-vars for numeric options. (#1159, thx andrewb)
 
 - 1.4.20 - 2008-09-30
 
